// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test should match screenshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  />
</DocumentFragment>
`;

exports[`snapshot test should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-10"
  />
</DocumentFragment>
`;
